--- a/airlines-app/angular.json
+++ b/airlines-app/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "airlines-app"
+    }
+  },
+  "defaultProject": "airlines-app",
+  "cli": {
+    "analytics": "bc5cbbb0-1632-403a-9eae-7ce1ddd86337"
+  }
 }
